# chords-explorer

./: .pre-commit-config.yaml  Makefile  README.md
.cloudbuild/: cloudbuild.yaml
.github/workflows/: lint.yml
back/: README.md  constants.py  data.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.in  requirements.txt  todo.txt
back/app/: chords_analyzer.py  hook_theory_client.py  main.py  schema.py
back/app/chords_calculator/: modal_substitution.py  tritone_substitution.py
back/app/modal_substitution/: generator.py
back/app/secondary_dominant/: generator.py
back/app/services/: analysis.py  data_filler.py
back/app/tritone_substitution/: generator.py
back/app/utils/: borrowed_modes.py  chords_analyzer.py  common.py  mode_detection_gemini.py
back/tests/: test_modal_substitution_generator.py  test_utils_borrowed_modes.py  test_utils_chords_analyzer.py  test_utils_common.py
back/tests/chords_calculator/: test_modal_substitution.py
back/tests/utils/: test_borrowed_modes.py  test_chords_analyzer.py  test_common.py
front/: .eslintrc.cjs  README.md  deploy.sh  index.html  package-lock.json  package.json  vitest.config.ts
front/i18n/: en.json  fr.json  index.js
front/iac/: main.tf
front/src/: App.vue  constants.js  keyboard.js  main.ts  sampler.js
front/src/api/: analyzer.ts  config.ts
front/src/assets/: base.css  main.css
i18n/: en.json  fr.json
iac/: provider.tf
src/components/: NavBar.vue  NavigationDrawer.vue
src/router/: index.ts
src/views/: AdvancedExplorer.vue  FormView.vue  SimpleExplorer.vue  TableView.vue
(+48 files in other folders)
